victor file updated

--- a/your-code/Test Victor.ipynb
+++ b/your-code/Test Victor.ipynb
@@ -592,33 +592,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "chocolate                         332\n",
-       "raisins                           198\n",
-       "chocolate, oats                   121\n",
-       "nuts, chocolate                    69\n",
-       "nuts,raisins                       28\n",
-       "nuts, oats, chocolate              17\n",
-       "nuts, oats                          6\n",
-       "raisins, oats                       3\n",
-       "chocolate, peanut butter            2\n",
-       "peanut butter                       2\n",
-       "chocolate, oats, peanut butter      1\n",
+       "chocolate                         1893\n",
+       "raisins                           1200\n",
+       "chocolate, oats                    749\n",
+       "nuts, chocolate                    521\n",
+       "nuts, raisins                      333\n",
+       "nuts, oats, chocolate              295\n",
+       "nuts, oats                         107\n",
+       "chocolate, peanut butter            52\n",
+       "raisins, oats                       24\n",
+       "peanut butter                       15\n",
+       "oats                                 4\n",
+       "chocolate, oats, peanut butter       2\n",
+       "peanut butter, raisins               1\n",
        "Name: mixins, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cookies_validation[\"mixins\"].value_counts()"
+    "cookies[\"mixins\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cookies[\"mixins\"] = cookies[\"mixins\"].str.replace(\"nuts,raisins\", \"nuts, raisins\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cookies_validation[\"mixins\"] = cookies_validation[\"mixins\"].str.replace(\"nuts,raisins\", \"nuts, raisins\")"
    ]
   }
  ],
