--- a/your-code/Cookies_Validate_cleaned.ipynb
+++ b/your-code/Cookies_Validate_cleaned.ipynb
@@ -493,7 +493,7 @@
    "source": [
     "# define X and y (features and target)\n",
     "X = cookies_validate.drop(columns=\"quality\")\n",
-    "X.to_csv('cookies_validate_cleaned.csv')"
+    "X.to_csv('../data/cookies_validate_cleaned.csv')data"
    ]
   }
  ],
@@ -513,7 +513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
