--- a/your-code/Main.ipynb
+++ b/your-code/Main.ipynb
@@ -553,7 +553,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cookies = cookies[cookies.select_dtypes(['int64','float64']).ge(0).all(1)]\n"
+    "cookies = cookies[cookies.select_dtypes(['int64','float64']).ge(0).all(1)]\n",
+    "cookies_outliers = cookies.copy()"
    ]
   },
   {
@@ -639,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +649,7 @@
     "y = cookies[\"quality\"]\n",
     "\n",
     "#define X_validate_cookis to scale laterly\n",
-    "X_validate = pd.read_csv('cookies_validate_cleaned.csv')\n",
+    "X_validate = pd.read_csv('../data/cookies_validate_cleaned.csv')\n",
     "X_validate.drop(columns='Unnamed: 0', inplace=True)"
    ]
   },
@@ -715,7 +716,12 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1113,12 +1119,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
     "predictions_rf = best_random.predict(X_test_scaled)\n",
-    "#pd.DataFrame(best_random.predict(X_validate_scaled)).to_csv('yellow_team_pred_random_forest.csv')"
+    "pd.DataFrame(best_random.predict(X_validate_scaled)).to_csv('../data/yellow_team_pred_random_forest_with_out.csv')"
    ]
   },
   {
@@ -1139,6 +1145,320 @@
    ],
    "source": [
     "mean_squared_error(y_test, predictions_rf, squared=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Removing Outliers again to improve RMSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cookies_outliers = cookies.copy()\n",
+    "cookies_outliers[\"bake temp\"] = cookies_outliers[cookies_outliers[\"bake temp\"]<1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cookies_outliers.dropna(axis=0, how=\"any\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_out = cookies_outliers.drop(columns=\"quality\")\n",
+    "y_out = cookies_outliers[\"quality\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_out, X_test_out, y_train_out, y_test_out = train_test_split(X_out, y_out, test_size = 0.25, random_state=8)\n",
+    "\n",
+    "# training datasets to DataFrame again to manipulate them\n",
+    "X_train_out = pd.DataFrame(X_train_out, columns= X_out.columns)\n",
+    "X_test_out = pd.DataFrame(X_test_out, columns= X_out.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler() # initiate transformer\n",
+    "\n",
+    "X_train_out_scaled = scaler.fit_transform(X_train_out) # scale data\n",
+    "X_test_out_scaled = scaler.transform(X_test_out) # scale test set\n",
+    "\n",
+    "#Cookie Validate Scaled\n",
+    "X_validate_scaled = scaler.transform(X_validate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 0.5775935649871826 seconds ---\n",
+      "-0.49\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "neigh2 = KNeighborsRegressor()\n",
+    "\n",
+    "param_distribs={\"n_neighbors\": randint(low=3, high=50),\n",
+    "                \"weights\":[\"uniform\", \"distance\"],\n",
+    "                \"algorithm\":[\"auto\", \"ball_tree\", \"kd_tree\", \"brute\"],\n",
+    "                \"leaf_size\":randint(low=10, high=70),\n",
+    "                \"p\":[1,2]}\n",
+    "\n",
+    "neigh2_search = GridSearchCV(estimator=neigh2,\n",
+    "                            param_grid={\"n_neighbors\":[13],\n",
+    "                            \"weights\":[\"distance\"],\n",
+    "                            \"algorithm\":[\"brute\"],\n",
+    "                            \"leaf_size\":[57],\n",
+    "                            \"p\":[1]},\n",
+    "                            scoring=\"neg_mean_squared_error\",\n",
+    "                            cv=50)\n",
+    "\n",
+    "neigh2_search.fit(X_train_out_scaled, y_train_out)\n",
+    "\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(round(neigh2_search.best_score_, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'algorithm': 'brute',\n",
+       " 'leaf_size': 57,\n",
+       " 'n_neighbors': 13,\n",
+       " 'p': 1,\n",
+       " 'weights': 'distance'}"
+      ]
+     },
+     "execution_count": 235,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neigh2_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bestknn_out = KNeighborsRegressor(algorithm= 'brute', leaf_size= 57, n_neighbors= 13, p=1, weights= 'distance')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsRegressor(algorithm='brute', leaf_size=57, n_neighbors=13, p=1,\n",
+       "                    weights='distance')"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bestknn_out.fit(X_train_out_scaled, y_train_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_knn_out = bestknn_out.predict(X_test_out_scaled)\n",
+    "#pd.DataFrame(best_random_out.predict(X_validate_scaled)).to_csv('../data/yellow_team_pred_knn_out.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5962444901957638"
+      ]
+     },
+     "execution_count": 283,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(y_test_out, predictions_knn_out, squared=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RandomForest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 39.63210988044739 seconds ---\n",
+      "-0.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "RF3 = RandomForestRegressor()\n",
+    "RF3_search_out = GridSearchCV(estimator=RF2,\n",
+    "                            param_grid={\"max_features\":[\"log2\"],\n",
+    "                            \"criterion\":[\"mse\"]},\n",
+    "                            scoring=\"neg_mean_squared_error\",\n",
+    "                            cv=50)\n",
+    "RF3_search_out.fit(X_train_out_scaled, y_train_out)\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "print(round(RF3_search_out.best_score_, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'criterion': 'mse', 'max_features': 'log2'}"
+      ]
+     },
+     "execution_count": 274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RF3_search_out.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_random_out = RandomForestRegressor(criterion= 'mse', max_features='log2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(max_features='log2')"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_random_out.fit(X_train_out_scaled, y_train_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_rf_out = best_random_out.predict(X_test_out_scaled)\n",
+    "pd.DataFrame(best_random_out.predict(X_validate_scaled)).to_csv('../data/yellow_team_pred_randomF_out.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6253039000571723"
+      ]
+     },
+     "execution_count": 286,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_squared_error(y_test_out, predictions_rf_out, squared=False)"
    ]
   },
   {
@@ -1165,7 +1485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
