push for updating repo

--- a/your-code/Main-Victor Changes.ipynb
+++ b/your-code/Main-Victor Changes.ipynb
@@ -471,7 +471,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -562,8 +562,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
+    "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
     }
@@ -576,7 +577,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-14682b8c1684>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpairplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcookies_float\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_vars\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcookies_float\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mx_vars\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'quality'\u001b[0m \u001b[1;33m,\u001b[0m\u001b[0mkind\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'reg'\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-10-14682b8c1684>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpairplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcookies_float\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_vars\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcookies_float\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mx_vars\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'quality'\u001b[0m \u001b[1;33m,\u001b[0m\u001b[0mkind\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'reg'\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m: name 'cookies_float' is not defined"
      ]
     }
@@ -601,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -835,67 +836,67 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>0.748599</td>\n",
+       "      <td>0.749235</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Gradient Boost</td>\n",
-       "      <td>0.715438</td>\n",
+       "      <td>0.716589</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>KNN</td>\n",
-       "      <td>0.666949</td>\n",
+       "      <td>0.665062</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Bayesan</td>\n",
-       "      <td>0.630448</td>\n",
+       "      <td>0.647977</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Logistic Regression</td>\n",
-       "      <td>0.596357</td>\n",
+       "      <td>Tweedie</td>\n",
+       "      <td>0.587809</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Tweedie</td>\n",
-       "      <td>0.592685</td>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>0.584259</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>Perceptron</td>\n",
-       "      <td>0.319930</td>\n",
+       "      <td>0.284299</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Lasso</td>\n",
-       "      <td>-0.001689</td>\n",
+       "      <td>Ridge</td>\n",
+       "      <td>0.084759</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Lassolars</td>\n",
-       "      <td>-0.001689</td>\n",
+       "      <td>Lasso</td>\n",
+       "      <td>-0.000695</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Ridge</td>\n",
-       "      <td>-1.025335</td>\n",
+       "      <td>Lassolars</td>\n",
+       "      <td>-0.000695</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>Linear regression</td>\n",
-       "      <td>-17.171090</td>\n",
+       "      <td>-3.376531</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -903,21 +904,21 @@
        "</div>"
       ],
       "text/plain": [
-       "                  model    test_r2 time_to_train_sec\n",
-       "0         Random Forest   0.748599                 6\n",
-       "1        Gradient Boost   0.715438                 2\n",
-       "2                   KNN   0.666949                 0\n",
-       "3               Bayesan   0.630448                 0\n",
-       "4   Logistic Regression   0.596357                 0\n",
-       "5               Tweedie   0.592685                 0\n",
-       "6            Perceptron   0.319930                 0\n",
-       "7                 Lasso  -0.001689                 0\n",
-       "8             Lassolars  -0.001689                 0\n",
-       "9                 Ridge  -1.025335                 0\n",
-       "10    Linear regression -17.171090                 0"
+       "                  model   test_r2 time_to_train_sec\n",
+       "0         Random Forest  0.749235                 6\n",
+       "1        Gradient Boost  0.716589                 2\n",
+       "2                   KNN  0.665062                 0\n",
+       "3               Bayesan  0.647977                 0\n",
+       "4               Tweedie  0.587809                 0\n",
+       "5   Logistic Regression  0.584259                 0\n",
+       "6            Perceptron  0.284299                 0\n",
+       "7                 Ridge  0.084759                 0\n",
+       "8                 Lasso -0.000695                 0\n",
+       "9             Lassolars -0.000695                 0\n",
+       "10    Linear regression -3.376531                 0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,14 +951,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.4258840084075928 seconds ---\n",
+      "--- 0.40816593170166016 seconds ---\n",
       "-0.47\n",
       "{'algorithm': 'brute', 'leaf_size': 57, 'n_neighbors': 13, 'p': 1, 'weights': 'distance'}\n"
      ]
@@ -991,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1011,7 @@
        "                    weights='distance')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,16 +1031,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6790098041624697"
+       "0.6609920567313541"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,14 +1059,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 27.658279418945312 seconds ---\n",
+      "--- 27.008503198623657 seconds ---\n",
       "-0.4\n"
      ]
     }
@@ -1085,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1095,7 @@
        "{'criterion': 'mse', 'max_features': 'log2'}"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1124,7 @@
        "RandomForestRegressor(max_features='log2')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,16 +1145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6277272862427759"
+       "0.6059868462757334"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1305,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1314,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1324,11 +1325,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_out, X_test_out, y_train_out, y_test_out = train_test_split(X_out, y_out, test_size = 0.2, random_state=8)\n",
+    "X_train_out, X_test_out, y_train_out, y_test_out = train_test_split(X_out, y_out, test_size = 0.1, random_state=8)\n",
     "\n",
     "# training datasets to DataFrame again to manipulate them\n",
     "X_train_out = pd.DataFrame(X_train_out, columns= X_out.columns)\n",
@@ -1337,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1366,15 +1367,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.37998485565185547 seconds ---\n",
-      "-0.48\n"
+      "--- 0.4488034248352051 seconds ---\n",
+      "-0.47\n"
      ]
     }
    ],
@@ -1405,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1419,7 @@
        " 'weights': 'distance'}"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1449,7 @@
        "                    weights='distance')"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,25 +1460,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions_knn_out = bestknn.predict(X_test_out_scaled)"
+    "predictions_knn_out = bestknn_out.predict(X_test_out_scaled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5988248725344165"
+       "0.6126789083250576"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,14 +1496,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 26.043431997299194 seconds ---\n",
+      "--- 28.62996220588684 seconds ---\n",
       "-0.4\n"
      ]
     }
@@ -1522,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1532,7 @@
        "{'criterion': 'mse', 'max_features': 'log2'}"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1561,7 @@
        "RandomForestRegressor(max_features='log2')"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,16 +1581,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6206086913735247"
+       "0.5518814329995284"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
